--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -43,7 +43,7 @@ body {
 
 ::-webkit-scrollbar-track {
   /* background-color: #e9ecef; */
-  margin: .4rem 0 1rem;
+  /* margin: .4rem 0 1rem; */
   border-radius: 10rem;
 }
 
