--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -26,6 +26,11 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* Focus State */
